[package]
name = "dcert"
version = "1.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SCGIS-Wales/dcert"
description = "A CLI tool to decode and validate TLS certificates from PEM files"
readme = "README.md"

[[bin]]
name = "dcert"
path = "src/main.rs"

[dependencies]

pem-rfc7468 = { version = "1.0", features = ["alloc"] }
url = "2.5"
base64 = "0.22"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
time = { version = "0.3", features = ["formatting"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
x509-parser = "0.18"
openssl = "0.10"
pem = "3.0"
lazy_static = "1.5"

[dev-dependencies]
tempfile = "3.23"

rustc_version_runtime = "0.3"
