[package]
name = "dcert"
version = "3.0.16"
edition = "2021"
license = "MIT"
repository = "https://github.com/SCGIS-Wales/dcert"
description = "TLS certificate analysis, format conversion, and key verification — CLI and MCP server"
readme = "README.md"

[[bin]]
name = "dcert"
path = "src/main.rs"

[[bin]]
name = "dcert-mcp"
path = "src/mcp/main.rs"

[dependencies]

pem-rfc7468 = { version = "1.0", features = ["alloc"] }
url = "2.5"
base64 = "0.22"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
colored = "3.1"
time = { version = "0.3", features = ["formatting"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
x509-parser = "0.18"
openssl = "0.10"
pem = "3.0"
lazy_static = "1.5"
serde_yml = "0.0.12"
ctrlc = "3.4"
openssl-probe = "0.2"
rmcp = { version = "0.15", features = ["server", "transport-io", "client"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-std", "sync"] }
schemars = "1.0"

[dev-dependencies]
tempfile = "3.25"

rustc_version_runtime = "0.3"
