[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dcert"
version = "3.0.13"
description = "MCP server for TLS certificate analysis via the Model Context Protocol"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [
    { name = "sreengineer" },
]
keywords = ["tls", "certificate", "x509", "mcp", "model-context-protocol", "fastmcp", "ai-tools", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]

[project.urls]
Homepage = "https://github.com/SCGIS-Wales/dcert"
Repository = "https://github.com/SCGIS-Wales/dcert"
Issues = "https://github.com/SCGIS-Wales/dcert/issues"
Documentation = "https://github.com/SCGIS-Wales/dcert#python-package"
Changelog = "https://github.com/SCGIS-Wales/dcert/releases"

[project.scripts]
dcert-python = "dcert.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dcert"]

[tool.hatch.build.targets.sdist]
include = [
    "src/dcert/",
    "tests/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
